--- a/templates/portfolio/projects.pug
+++ b/templates/portfolio/projects.pug
@@ -61,12 +61,7 @@ html(lang="en")
       }
 
   body
-    nav
-      a(href="/") Home
-      |  | 
-      a(href="/projects") Projects
-      |  | 
-      a(href="/extras") More About Me
+    include partials/nav
 
     h1 Experience & Projects
 
